Fix responsive overflow

--- a/src/styles/partials/_base.sass
+++ b/src/styles/partials/_base.sass
@@ -13,7 +13,7 @@ html
     scroll-behavior: smooth
 
 body
-    overflow-x: hidden
+    // Allow horizontal scrolling to reveal any layout issues
     width: 100%
     display: grid
     grid-template-areas: "nav" "head" "main" "foot"
